--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1165,6 +1165,40 @@
 	margin-bottom: 50px;
 }
 
+@keyframes animacion1 {
+
+	from {
+		color: whitesmoke;
+	}
+
+	to {
+		color: #F249CE;
+	}
+}
+
+@keyframes animacion2 {
+
+	0% {
+		transform: scale(1);
+	}
+
+	50% {
+		transform: scale(1.1);
+	}
+
+	100% {
+		transform: scale(1)
+	}
+
+}
+
+#nosotros h3{
+	animation-name: animacion1;
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate-reverse;
+}
+
 #nosotros .imagenprincipal {
 	display: flex;
 	margin-top: -30px;
@@ -1214,6 +1248,10 @@
 	font-family: 'Mali';
 	font-size: 40px;
 	text-shadow: 0 0 8px black;
+	animation-name: animacion1;
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate-reverse;
 }
 
 #nosotros .parrafo {
@@ -1234,6 +1272,14 @@
 	color: #EBAEB2;
 	font-size: 20px;
 	text-shadow: 0 0 8px black;
+}
+
+.criticas img {
+	animation-name: animacion2;
+	animation-duration: 0.5s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+	animation-direction: alternate;
 }
 
 #nosotros .nombre {
@@ -1323,10 +1369,6 @@
 	font-size: 20px;
 }
 
-#nosotros .parrafo > div {
-	height: 150px;
-}
-
 }
 
 
@@ -1379,10 +1421,6 @@
 
 #nosotros .nombre {
 	font-size: 18px;
-}
-
-#nosotros .parrafo > div {
-	height: 200px;
 }
 
 }
