--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -103,11 +103,15 @@
 	justify-content: space-between;
 }
 
-#inicio .menu1 a:hover {
-	text-decoration: underline;
+#inicio .menuinfo ul a {
+	color: white;
+	transition-property: color;
+	transition-duration: 0.3s;
+	transition-timing-function: ease-in;
 }
 
-#inicio .menuinfo ul a {
+#inicio .menu1 a:hover {
+	text-decoration: underline;
 	color: greenyellow;
 }
 
@@ -852,7 +856,7 @@
 	padding-bottom: 10px;
 }
 
-# .telefono {
+#contacto .telefono {
 	margin-top: 40px;
 	font-family: 'Concert One';
 	font-size: 25px;
@@ -887,9 +891,31 @@
 	background-color: #1E6E37;
 }
 
-#login .logos {
+#login .logo {
+	background-color: #1E6E37;
+}
+
+#login .logo {
 	display: flex;
-	flex-wrap: no-wrap;
+	flex-wrap: wrap;
+}
+
+#login .logos2 {
+	flex: 1;
+}
+
+#login .logos img {
+	width: 425px;
+	height: 250px;
+}
+
+#login .logos2 img {
+	width: 400px;
+}
+
+#login .logo {
+	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: left;
 	padding: 20px;
@@ -898,18 +924,12 @@
 	margin-left: -20px;
 }
 
-#login .logo2 {
-	position: absolute;
-	left: 300px;
-	top: 75px;
-}
-
-#login .logos img {
+#login .logo img {
 	cursor: pointer;
 	transition: all 0.3s ease-in-out;
 }
 
-#login .logos img:hover {
+#login .logo img:hover {
 	transform: scale(1.1);
 }
 
@@ -917,49 +937,62 @@
 	text-decoration: none;
 }
 
+
 #login ul {
 	padding: 0;
 	list-style: none;
 }
 
 #login nav {
+	width: 100%;
 	margin-top: 0;
-}
-
-#login .menuinfo {
+	width: 100%;
 	display: flex;
+	flex-wrap: no-wrap;
 	background-color: #248542;
 	word-spacing: 30px;
 	font-family: 'Rubik Moonrocks';
 	font-size: 10px;
 }
 
-#login .menuinfo ul {
-	display: inline-block;
-}
-#login .menuinfo li {
-	display: inline-block;
-	font-size: 30px;
 
+
+#login .menuinfo ul {
+	width: 100%;
+}
+
+#login .menuinfo li {
+	font-size: 30px;
 }
 
 #login .menu1 {
-	padding-left: 40px;
-
+	padding-left: 30px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly ;
 }
 
 #login .menu2 {
-	padding-left: 600px;
-	word-spacing: 10px;
-	vertical-align: bottom;
+	margin-right: 30px;
+	vertical-align: middle;
+	display: flex;
+	justify-content: flex-end;
+}
 
+#login .espaciado {
+	display: flex;
+	justify-content: space-between;
+}
+
+#login .menuinfo ul a {
+	color: white;
+	transition-property: color;
+	transition-duration: 0.3s;
+	transition-timing-function: ease-in;
 }
 
 #login .menu1 a:hover {
 	text-decoration: underline;
-}
-
-#login .menuinfo ul a {
 	color: greenyellow;
 }
 
@@ -976,7 +1009,7 @@
 
 
 #login main {
-	margin-bottom: 75px;
+	margin-bottom: 70px;
 }
 
 #login .titulosecundario {
@@ -999,6 +1032,10 @@
 	margin-bottom: 40px;
 }
 
+#login .flechita img {
+	width: 100px;
+}
+
 #login .datos {
 	text-align: center;
 	color: white;
@@ -1015,13 +1052,87 @@
 }
 
 #login .datos label, span {
-	/*background-color: #1E6E37;*/
 	border-radius: 10%;
 }
 
 #login .datos a:hover {
 	color: greenyellow;
 }
+
+
+
+
+
+
+
+
+@media (max-width: 1100px){
+
+#login .logos img {
+	width: 325px;
+	height: 200px;
+}
+
+#login .logos2 img {
+	width: 300px;
+}
+
+#login .menuinfo li {
+	font-size: 26px;
+}
+
+#login .titulosecundario {
+	font-size: 50px;
+}
+
+#login .flechita img {
+	width: 80px;
+}
+
+#login .datos {
+	font-size: 30px;
+}
+
+#login main {
+	margin-bottom: 60px;
+}
+
+
+}
+
+@media (max-width: 700px){
+
+#login .logos img {
+	width: 250px;
+	height: 150px;
+}
+
+#login .logos2 img {
+	width: 240px;
+}
+
+#login .menuinfo li {
+	font-size: 20px;
+}
+
+#login .titulosecundario {
+	font-size: 40px;
+}
+
+#login .flechita img {
+	width: 60px;
+}
+
+#login .datos {
+	font-size: 25px;
+}
+
+#login main {
+	margin-bottom: 50px;
+}
+
+}
+
 
 /*--------------------------*/
 
@@ -1134,11 +1245,6 @@
 	display: flex;
 	justify-content: space-between;
 }
-
-
-/*#nosotros .menuinfo ul a {
-	color: greenyellow;
-}*/
 
 #nosotros .menuinfo ul a {
 	color: white;
