--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1820,7 +1820,7 @@
 
 
 #tienda {
-	background-color: #5c4c26;
+	background-color: #7A5537;
 	background-repeat: repeat;
 	background-position: center center;
 	background-attachment: fixed;
@@ -1834,12 +1834,34 @@
 
 
 #tienda .logos {
-	background-color: #5c4c26;
+	background-color: #7A5537;
 }
 
-#tienda .logos {
+#tienda .logo {
+	background-color: #7A5537;
+}
+
+#tienda .logo {
 	display: flex;
-	flex-wrap: no-wrap;
+	flex-wrap: wrap;
+}
+
+#tienda .logos2 {
+	flex: 1;
+}
+
+#tienda .logos img {
+	width: 375px;
+	height: 220px;
+}
+
+#tienda .logos2 img {
+	width: 400px;
+}
+
+#tienda .logo {
+	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: left;
 	padding: 20px;
@@ -1848,24 +1870,19 @@
 	margin-left: -20px;
 }
 
-#tienda .logos img {
+#tienda .logo img {
 	cursor: pointer;
 	transition: all 0.3s ease-in-out;
 }
 
-#tienda .logos img:hover {
+#tienda .logo img:hover {
 	transform: scale(1.1);
-}
-
-#tienda .logo2 {
-	position: absolute;
-	left: 300px;
-	top: 75px;
 }
 
 #tienda a {
 	text-decoration: none;
 }
+
 
 #tienda ul {
 	padding: 0;
@@ -1873,43 +1890,54 @@
 }
 
 #tienda nav {
+	width: 100%;
 	margin-top: 0;
-}
-
-#tienda .menuinfo {
+	width: 100%;
 	display: flex;
+	flex-wrap: no-wrap;
 	background-color: #38230E;
 	word-spacing: 30px;
 	font-family: 'Rubik Moonrocks';
 	font-size: 10px;
 }
 
+
+
 #tienda .menuinfo ul {
-	display: inline-block;
+	width: 100%;
 }
 #tienda .menuinfo li {
-	display: inline-block;
 	font-size: 30px;
-
 }
 
 #tienda .menu1 {
-	padding-left: 40px;
-
+	padding-left: 30px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly ;
 }
 
 #tienda .menu2 {
-	padding-left: 600px;
-	word-spacing: 10px;
-	vertical-align: bottom;
+	margin-right: 30px;
+	vertical-align: middle;
+	display: flex;
+	justify-content: flex-end;
+}
 
+#tienda .espaciado {
+	display: flex;
+	justify-content: space-between;
+}
+
+#tienda .menuinfo ul a {
+	color: white;
+	transition-property: color;
+	transition-duration: 0.3s;
+	transition-timing-function: ease-in;
 }
 
 #tienda .menu1 a:hover {
 	text-decoration: underline;
-}
-
-#tienda .menuinfo ul a {
 	color: greenyellow;
 }
 
@@ -1920,6 +1948,9 @@
 #tienda .menuinfo img {
 	vertical-align: bottom;
 }
+
+
+
 
 #tienda h3 {
 	margin-top: 40px;
@@ -2028,23 +2059,3 @@
 	margin-bottom: 30px;
 	font-weight: bold;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
