--- a/estilos/estilos.scss
+++ b/estilos/estilos.scss
@@ -16,8 +16,6 @@
 		background-color: #1E6E37;
 		display: flex;
 		flex-wrap: wrap;
-		display: flex;
-		flex-wrap: wrap;
 		align-items: center;
 		justify-content: left;
 		padding: 20px;
@@ -78,6 +76,7 @@
 		font-family: 'Rubik Moonrocks';
 		font-size: 10px;
 
+
 		.menuinfo input {
 			vertical-align: bottom;
 		}
@@ -94,6 +93,7 @@
 				transition-property: color;
 				transition-duration: 0.3s;
 				transition-timing-function: ease-in;
+				text-decoration: none;
 			}
 
 		}
@@ -107,10 +107,10 @@
 			padding-left: 30px;
 			display: flex;
 			flex-wrap: wrap;
-			justify-content: space-evenly ;
+			justify-content: space-evenly;
+
 
 			a:hover {
-				text-decoration: underline;
 				color: greenyellow;
 			}
 		}
@@ -142,6 +142,7 @@
 		padding-bottom: 30px;
 		text-align: center;
 		word-spacing: 80px;
+		border-radius: 20px;
 
 
 		.foto1 {
@@ -261,6 +262,7 @@
 	.jefe {
 			padding: 20px;
 			background-color: #248542;
+			border-radius: 20px;
 
 			table {
 				border: 5px solid greenyellow;
@@ -757,6 +759,7 @@
 				transition-property: color;
 				transition-duration: 0.3s;
 				transition-timing-function: ease-in;
+				text-decoration: none;
 			}
 
 		}
@@ -773,7 +776,6 @@
 			justify-content: space-evenly ;
 
 			a:hover {
-				text-decoration: underline;
 				color: greenyellow;
 			}
 		}
@@ -1362,6 +1364,7 @@
 				transition-property: color;
 				transition-duration: 0.3s;
 				transition-timing-function: ease-in;
+				text-decoration: none;
 			}
 
 		}
@@ -1378,7 +1381,6 @@
 			justify-content: space-evenly ;
 
 			a:hover {
-				text-decoration: underline;
 				color: greenyellow;
 			}
 		}
@@ -1434,11 +1436,15 @@
 
 	}
 
+@mixin animacion {
+	animation-name: animacion1;
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate-reverse;
+}
+
 	h3{
-		animation-name: animacion1;
-		animation-duration: 1s;
-		animation-iteration-count: infinite;
-		animation-direction: alternate-reverse;
+		@include animacion;
 	}
 
 	.imagenprincipal {
@@ -1490,10 +1496,7 @@
 		font-family: 'Mali';
 		font-size: 40px;
 		text-shadow: 0 0 8px black;
-		animation-name: animacion1;
-		animation-duration: 1s;
-		animation-iteration-count: infinite;
-		animation-direction: alternate-reverse;
+		@include animacion;
 	}
 
 	.parrafo {
@@ -1536,10 +1539,10 @@
 		span {
 			font-size: 35px;
 			font-family: 'Mali';
+			@include animacion;
 
 			a {
 				color: black;
-				text-decoration: underline;	
 
 				&:hover {
 					color: greenyellow;
@@ -1548,7 +1551,7 @@
 		}
 
 		.ancla {
-			text-decoration:  none;
+			text-decoration: none;
 			border-bottom: 1px solid transparent;
 			transition-property: all;
 			transition-duration: 0.5s;
@@ -1972,6 +1975,7 @@
 				transition-property: color;
 				transition-duration: 0.3s;
 				transition-timing-function: ease-in;
+				text-decoration: none;
 			}
 
 		}
@@ -1988,7 +1992,6 @@
 			justify-content: space-evenly ;
 
 			a:hover {
-				text-decoration: underline;
 				color: greenyellow;
 			}
 		}
