--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -112,7 +112,7 @@
     letter-spacing: 3px; }
   #inicio .texto1 {
     text-align: center;
-    font-size: 28px;
+    font-size: 30px;
     color: ghostwhite;
     text-shadow: 0 0 8px black;
     font-family: 'Concert One';
@@ -200,15 +200,15 @@
       border: 0; }
   #inicio footer {
     margin-bottom: 40px; }
-    #inicio footer p {
+    #inicio footer h2 {
       word-spacing: 10px;
-      font-size: 40px;
+      font-size: 50px;
       color: ghostwhite;
       text-shadow: 0 0 8px black;
       font-weight: bold;
       letter-spacing: 2px;
       text-align: center;
-      font-family: 'Mali'; }
+      font-family: 'Patrick Hand'; }
     #inicio footer .grid {
       width: 700px;
       margin: auto;
@@ -318,8 +318,8 @@
     grid-template-areas: 'Whatsapp Whatsapp' 'Twitter Facebook' 'Youtube Facebook' 'Instagram Facebook'; }
     #inicio .redes .grid a {
       font-size: 25px; }
-  #inicio .redes p {
-    font-size: 35px; }
+  #inicio .redes h2 {
+    font-size: 40px; }
   #inicio .copyright {
     padding: 4px;
     font-size: 18px; } }
@@ -377,8 +377,8 @@
     grid-template-areas: 'Whatsapp Whatsapp' 'Twitter Facebook' 'Youtube Facebook' 'Instagram Facebook'; }
     #inicio .redes .grid a {
       font-size: 20px; }
-  #inicio .redes p {
-    font-size: 25px; }
+  #inicio .redes h2 {
+    font-size: 30px; }
   #inicio .copyright {
     padding: 3px;
     font-size: 15px; } }
@@ -471,11 +471,11 @@
     word-spacing: 15px;
     color: ghostwhite;
     font-family: 'Patrick Hand';
-    font-size: 50px; }
+    font-size: 37px; }
     #contacto .titulo p {
       padding: 0;
       margin: 0; }
-    #contacto .titulo h3 {
+    #contacto .titulo h1 {
       padding: 0;
       margin: 0; }
     #contacto .titulo img {
@@ -489,7 +489,7 @@
     margin-left: 20px;
     margin-right: 20px;
     font-family: 'Concert One';
-    font-size: 35px;
+    font-size: 30px;
     color: ghostwhite;
     text-align: center;
     text-shadow: 0 0 8px black; }
@@ -501,15 +501,7 @@
     padding-top: 25px;
     padding-bottom: 10px;
     font-family: 'Concert One';
-    font-size: 25px;
-    color: ghostwhite;
-    text-align: center;
-    text-shadow: 0 0 8px black; }
-  #contacto .apellido {
-    padding-top: 20px;
-    padding-bottom: 10px;
-    font-family: 'Concert One';
-    font-size: 25px;
+    font-size: 30px;
     color: ghostwhite;
     text-align: center;
     text-shadow: 0 0 8px black; }
@@ -517,14 +509,6 @@
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 40px;
-    font-family: 'Concert One';
-    font-size: 25px;
-    color: ghostwhite;
-    text-align: center;
-    text-shadow: 0 0 8px black; }
-  #contacto .detalle {
-    padding-top: 20px;
-    padding-bottom: 10px;
     font-family: 'Concert One';
     font-size: 25px;
     color: ghostwhite;
@@ -559,12 +543,9 @@
   #contacto nav li {
     font-size: 26px; }
   #contacto .titulo {
-    font-size: 40px; }
+    font-size: 32px; }
   #contacto .datos {
-    font-size: 30px; }
-  #contacto .telefono {
-    margin-top: 20px;
-    font-size: 23px; }
+    font-size: 25px; }
   #contacto .envio {
     margin-bottom: 10px; } }
 
@@ -577,15 +558,17 @@
   #contacto nav li {
     font-size: 20px; }
   #contacto .titulo {
-    font-size: 30px; }
+    font-size: 27px; }
   #contacto .datos {
-    font-size: 25px; }
+    font-size: 22px; }
   #contacto .telefono {
     margin-top: 10px;
     padding-top: 10px;
     font-size: 21px; }
   #contacto .envio {
-    margin-bottom: 5px; } }
+    margin-bottom: 5px; }
+  #contacto .nombre {
+    font-size: 25px; } }
 
 /*---------------------------------------------------------------------*/
 #login {
@@ -638,8 +621,8 @@
     font-family: 'Patrick Hand';
     color: ghostwhite;
     text-shadow: 0 0 8px black; }
-  #login h3 {
-    font-size: 70px;
+  #login h1 {
+    font-size: 80px;
     margin-top: 0;
     margin-bottom: 0; }
   #login .flechita {
@@ -675,8 +658,8 @@
     margin: 15px;
     padding: 15px;
     font-size: 50px; }
-  #login h3 {
-    font-size: 60px; }
+  #login h1 {
+    font-size: 70px; }
   #login .flechita {
     text-align: center;
     margin-bottom: 30px; }
@@ -695,8 +678,8 @@
     font-size: 40px;
     margin: 10px;
     padding: 10px; }
-  #login h3 {
-    font-size: 50px; }
+  #login h1 {
+    font-size: 60px; }
   #login .flechita {
     text-align: center;
     margin-bottom: 20px; }
@@ -790,7 +773,7 @@
   #nosotros .titulo {
     margin: 20px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Patrick Hand';
     color: ghostwhite;
     text-shadow: 0 0 8px black;
@@ -810,7 +793,7 @@
     transform: scale(1.1); }
   100% {
     transform: scale(1); } }
-  #nosotros h3 {
+  #nosotros h1 {
     animation-name: animacion1;
     animation-duration: 1s;
     animation-iteration-count: infinite;
@@ -842,7 +825,7 @@
   #nosotros main {
     margin-left: 40px;
     margin-right: 30px; }
-  #nosotros h4 {
+  #nosotros h2 {
     text-align: left;
     color: ghostwhite;
     font-family: 'Mali';
@@ -905,8 +888,8 @@
   #nosotros nav li {
     font-size: 26px; }
   #nosotros .titulo {
-    font-size: 40px; }
-  #nosotros h4 {
+    font-size: 35px; }
+  #nosotros h2 {
     font-size: 35px; }
   #nosotros .parrafo {
     font-size: 20px; }
@@ -931,8 +914,8 @@
   #nosotros nav li {
     font-size: 20px; }
   #nosotros .titulo {
-    font-size: 30px; }
-  #nosotros h4 {
+    font-size: 25px; }
+  #nosotros h2 {
     font-size: 25px; }
   #nosotros .parrafo {
     font-size: 16px; }
@@ -986,9 +969,9 @@
         width: 400px;
         display: flex;
         flex-wrap: wrap; }
-  #sucursales h3 {
+  #sucursales h1 {
     text-align: center;
-    font-size: 60px;
+    font-size: 70px;
     font-family: 'Patrick Hand';
     color: ghostwhite;
     text-shadow: 0 0 8px black;
@@ -996,6 +979,8 @@
     margin-top: 50px;
     margin-bottom: 30px; }
   #sucursales .maps {
+    margin-left: 20px;
+    margin-right: 20px;
     display: flex;
     justify-content: center;
     margin-bottom: 40px; }
@@ -1004,30 +989,22 @@
       height: 300px; }
 
 @media (max-width: 1100px) {
-  #login .logo .logos img {
+  #sucursales .logo .logos img {
     width: 325px;
     height: 200px; }
-  #login .logo .logos2 img {
+  #sucursales .logo .logos2 img {
     width: 300px; }
-  #login h3 {
-    font-size: 50px; }
-  #login .maps iframe {
-    width: 550px;
-    height: 240px; } }
+  #sucursales h1 {
+    font-size: 50px; } }
 
 @media (max-width: 700px) {
-  #login .logo .logos img {
+  #sucursales .logo .logos img {
     width: 250px;
     height: 150px; }
-  #login .logo .logos2 img {
+  #sucursales .logo .logos2 img {
     width: 240px; }
-  #login h3 {
-    font-size: 40px; }
-  #login .maps {
-    margin-bottom: 20px; }
-    #login .maps iframe {
-      width: 400px;
-      height: 180px; } }
+  #sucursales h1 {
+    font-size: 45px; } }
 
 /*----------------------------------------------------------------------*/
 #tienda {
@@ -1109,7 +1086,7 @@
     #tienda nav .espaciado {
       display: flex;
       justify-content: space-between; }
-  #tienda h3 {
+  #tienda h1 {
     margin-top: 40px;
     margin-bottom: 40px;
     text-align: center;
@@ -1123,7 +1100,7 @@
     background-image: url(../imagenes/agregado.png);
     height: 25px;
     width: 100%; }
-  #tienda h4 {
+  #tienda h2 {
     text-align: center;
     font-size: 45px;
     font-family: 'Mali';
@@ -1193,9 +1170,9 @@
     width: 300px; }
   #tienda nav li {
     font-size: 26px; }
-  #tienda h3 {
+  #tienda h1 {
     font-size: 50px; }
-  #tienda h4 {
+  #tienda h2 {
     font-size: 40px; }
   #tienda table span {
     font-size: 23px; }
@@ -1212,9 +1189,9 @@
     width: 240px; }
   #tienda nav li {
     font-size: 20px; }
-  #tienda h3 {
+  #tienda h1 {
     font-size: 40px; }
-  #tienda h4 {
+  #tienda h2 {
     font-size: 35px; }
   #tienda main a {
     font-size: 20px; }
