--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -87,22 +87,15 @@
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
-    word-spacing: 80px;
     border-radius: 20px; }
-    #inicio .slider .foto1 {
+    #inicio .slider img {
       width: 40%;
-      min-width: 230px; }
-    #inicio .slider .foto2 {
-      width: 40%;
-      min-width: 230px; }
-    #inicio .slider a img {
-      width: 100%;
       min-width: 230px;
       border-radius: 30px;
       border: 4px solid black; }
-    #inicio .slider a:hover img {
-      border-style: dashed;
-      border-color: greenyellow; }
+      #inicio .slider img:hover {
+        border-style: dashed;
+        border-color: greenyellow; }
   #inicio .titulosecundario {
     text-align: center;
     font-family: 'Patrick Hand';
@@ -341,7 +334,7 @@
     text-shadow: 0 0 8px black;
     font-family: 'Concert One'; }
   #inicio .primeratabla {
-    font-size: 13px;
+    font-size: 12px;
     margin-bottom: 60px;
     margin-top: 60px; }
     #inicio .primeratabla table {
