--- a/estilos/estilos.scss
+++ b/estilos/estilos.scss
@@ -141,38 +141,19 @@
 		padding-top: 30px;
 		padding-bottom: 30px;
 		text-align: center;
-		word-spacing: 80px;
 		border-radius: 20px;
-
-
-		.foto1 {
-			width: 40%;
-			min-width: 230px;
-		}
-
-		.foto2 {
-			width: 40%;
-			min-width: 230px;
-		}
-
-		a {
+	
 			img {
-			width: 100%;
+			width: 40%;
 			min-width: 230px;
 			border-radius: 30px;
 			border: 4px solid black;
+
+			&:hover {
+			 border-style: dashed;
+			 border-color: greenyellow;
+				}
 			}
-		}
-
-		a:hover {
-
-			img {
-			border-style: dashed;
-			border-color: greenyellow;
-			}
-		}
-
-
 	}
 
 
@@ -586,7 +567,7 @@
 		}
 
 		.primeratabla {
-			font-size: 13px;
+			font-size: 12px;
 			margin-bottom: 60px;
 			margin-top: 60px;
 
